dark mode fixes

--- a/src/styles/darkmode.scss
+++ b/src/styles/darkmode.scss
@@ -10,6 +10,10 @@ body {
       background: $darkBack !important;
     }
 
+    section.login .loginForm {
+      border-color: $borderDark !important;
+    }
+
     .loginForm .fields input {
       background: none;
       border-color: $borderDark !important;
